[package]
name = "rustboy"
version = "0.0.1"
authors = ["Braden Dubois <braden.dubois@usask.ca>, Martin Thingvold <mthingvold@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level=0

[profile.release]
opt-level = 3
lto = true

[dependencies]
sdl2 = "0.34.5"
nix = "0.9.0"
